# masonkid-dj

./: .env  CHANGELOG.md  README.md  manage.py  pyproject.toml  settings.py
.devcontainer/: .env_db  devcontainer.json  docker-compose.yml
config/: .env.example  settings.py
dj_config/: asgi.py  settings.py  urls.py  wsgi.py
