[tool]

[tool.poetry]
name = "Django Mason Kid Starter"
version = "0.0.1"
description = "Django Mason Kid Starter"
authors = ["David Dahan <david.dahan3@gmail.com>"]

[tool.poetry.dependencies]

##########################################################################################
# Main
##########################################################################################
python = "3.11.6"
Django = "4.*"       # https://github.com/django/django
django-environ = "*" # https://github.com/joke2k/django-environ

##########################################################################################
# Security
##########################################################################################
django-cors-headers = "*" # https://github.com/adamchainz/django-cors-headers

##########################################################################################
# Database
##########################################################################################
dj-database-url = "*" # https://github.com/jazzband/dj-database-url
psycopg = { extras = [
    "binary",
], version = "*" } # https://github.com/psycopg/psycopg

##########################################################################################
# DX & Debug
##########################################################################################
ruff = "*" # https://github.com/charliermarsh/ruff
ipdb = "*" # https://github.com/gotcha/ipdb


[tool.ruff]
line-length = 90
target-version = "py311"
extend-exclude = ["migrations", "__pycache__"]
per-file-ignores = {}

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.isort]
section-order = [
    "future",
    "standard-library",
    "django",
    "third-party",
    "local-folder",
]
[tool.ruff.isort.sections]
"django" = ["django"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
